#214 - CRUD for query templates
- add update method for query template
